# idx_count_table

./: Cargo.toml  README.md  file3.idx.txt
src/: main.rs
test_data/: file1.idx.txt  file2.idx.txt
